curve25519: attempt at mapping all group elements to the subgroup by pow8. does not work because CV does not rewrite using pow8(x) = pow8(y)

--- a/TODO
+++ b/TODO
@@ -55,6 +55,7 @@ Document conditional statements (equation ..).
    probably needs GDH with equality pow8(..) = pow8(..)
    
 Document new DH macros.
+Update ProVerif crypto library with new DH definitions
    
 Avoid prime order assumption in textsecure => seems hard, ... 
 
