--- a/TODO
+++ b/TODO
@@ -125,7 +125,27 @@ src/facts.ml:              TO DO store side condition in the proba *)
    used when we just want to choose random numbers.)
    "bounded, nonuniform" is also allowed, to have a non-uniform
    distribution on a bounded type!
-   
+
+CV cannot exploit
+find j_4 = j <= Nsend suchthat defined(sephSecAB1[j]) && (pow8(sephPubAB_1) = pow8(sephPubAB1[j])) && (pow8(x_pubB_1) = pow8(pubA)) then
+
+else
+   new r_38...
+
+where sephPubAB1[j] = G8toG(gexpdiv8(g8, sephSecAB1[j]))
+to show that r_38 is defined, not((pow8(sephPubAB_1) = pow8(sephPubAB1[j])) && (pow8(x_pubB_1) = pow8(pubA)))
+assume sephPubAB1[j] defined after r_38, sephPubAB_1.
+pow8(sephPubAB_1) indep of sephSecAB1[j]
+pow8(sephPubAB1[j])) characterizes sephSecAB1[j]
+=> low proba of equality.
+But when adding the facts in get_fact_of_elsefind_fact
+pow8(sephPubAB_1) = pow8(sephPubAB1[j]) is added first
+and CV does not retest the collision between these terms
+when it adds sephPubAB1[j] = G8toG(gexpdiv8(g8, sephSecAB1[j])).
+
+workaround: remove_assign sephPubAB1[j].
+or add t' last ?
+
 1) Incompatible front-end, second step
 
    - if ... then .. !i<=N ..let x =
