--- a/TODO
+++ b/TODO
@@ -56,24 +56,6 @@ Document conditional statements (equation ..).
    
 Document new DH macros.
 Update ProVerif crypto library with new DH definitions
-   
-Avoid prime order assumption in textsecure => seems hard, ... 
-
-The application of collision statements does not seem to fully
-exploit the commutativity of mult.
-In examples/tls13/tls13-core-InitialHandshake-1RTTonly.cv with 
-collision x <-R Z; y <-R Z;
-	  return(exp(g,x) = exp(g,y)) <=(1/|Z|)=> return(false).
-collision x <-R Z; y <-R Z;
-	  return(exp'(g,x) = exp'(g,y)) <=(1/|Z|)=> return(false).
-and the GDH assumption of default-DHinprogress.cvl (not prime order),
-collision x <-R Z; y <-R Z; forall X: G;
-	  return(exp'(X, x) = exp'(g, mult(y,x))) <=(0)=> return(X = exp'(g,y)).
-applies at a point where
-collision x <-R Z; y <-R Z; forall X: G;
-	  return(exp'(X, x) = exp'(g, mult(x,y))) <=(0)=> return(X = exp'(g,y)).
-does not!
-(Compare the game after the GDH transformation with these two collisions.)
 
 For curve25519, let q be the order of the base point g.
 let Z be the integers multiple of 8 modulo 8q.
@@ -93,12 +75,6 @@ X = exp(g,y).(element of small order).
 CV infers that we cannot have  exp(X, x) = exp(g, mult(x,y))
 when X does not depend on y, from injectivity properties of exp(g,.)
 and mult(x,.) because exp(g, mult(x,y)) then characterizes y.
-
-Check that the dependency analysis (FindCompos) does not use collision
-statements with random arguments to show that a term characterizes these
-random arguments.
-OK: inside FindCompos, I use apply_eq_statements_at_root which applies
-only statements, not collisions, to simplify terms in find_compos_bin.
 
 gy_3 defined => else branch of 
             find j' = j'_1 <= N1 suchthat defined(cr_1[j'_1], gx[j'_1]) && (sgx = gx[j'_1]) then
@@ -3413,3 +3389,26 @@ more transformations with the square variant.
       DONE document new queries
       DONE style emacs .pcv
 DONE in CryptoVerif 2.00
+
+The application of collision statements does not seem to fully
+exploit the commutativity of mult.
+In examples/tls13/tls13-core-InitialHandshake-1RTTonly.cv with 
+collision x <-R Z; y <-R Z;
+	  return(exp(g,x) = exp(g,y)) <=(1/|Z|)=> return(false).
+collision x <-R Z; y <-R Z;
+	  return(exp'(g,x) = exp'(g,y)) <=(1/|Z|)=> return(false).
+and the GDH assumption of default-DHinprogress.cvl (not prime order),
+collision x <-R Z; y <-R Z; forall X: G;
+	  return(exp'(X, x) = exp'(g, mult(y,x))) <=(0)=> return(X = exp'(g,y)).
+applies at a point where
+collision x <-R Z; y <-R Z; forall X: G;
+	  return(exp'(X, x) = exp'(g, mult(x,y))) <=(0)=> return(X = exp'(g,y)).
+does not!
+(Compare the game after the GDH transformation with these two collisions.)
+CANNOT REPRODUCE
+
+Check that the dependency analysis (FindCompos) does not use collision
+statements with random arguments to show that a term characterizes these
+random arguments.
+OK: inside FindCompos, I use apply_eq_statements_at_root which applies
+only statements, not collisions, to simplify terms in find_compos_bin.
