--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -1537,14 +1537,16 @@ the same type.
 
 \item 
 $\texttt{collision }\nonterm{res}^*
+[\texttt{[restrictions\_may\_be\_equal]}]
 [\texttt{forall }\seq{vartype}\texttt{;}]$\\
 \null\qquad $\texttt{return(}\nonterm{simpleterm}\texttt{) <=(}\nonterm{proba}\texttt{)=> return(}\nonterm{simpleterm}\texttt{)}
 [\ \texttt{if}\ \nonterm{cond}]\texttt{.}$\\
 where
 \begin{align*}
 \nonterm{cond} &::= \nonterm{simpleterm}\\
-&\ \ \mid \ \nonterm{ident}\texttt{ independent of }\nonterm{ident}\\
-&\ \ \mid \ \nonterm{ident}\texttt{ independent of }\nonterm{ident}\texttt{ \&\& }\nonterm{cond}
+&\ \ \mid \ \nonterm{ident}\texttt{ independent-of }\nonterm{ident}\\
+&\ \ \mid \ \nonterm{cond}\texttt{ \&\& }\nonterm{cond}\\
+&\ \ \mid \ \nonterm{cond}\texttt{ || }\nonterm{cond}
 \end{align*}
 
 $\texttt{collision }\Resa{x_1}{T_1}\texttt{;}\ldots 
@@ -1571,9 +1573,22 @@ $\texttt{collision }\Resa{x_1}{T_1}\texttt{;}\ldots
 \texttt{forall }y_1:T'_1, \ldots, y_m:T'_m\texttt{;}$\\
 $\null\qquad \texttt{return(}M_1\texttt{) <=(}p\texttt{)=> return(}M_2\texttt{) if $c$.}$\\
 means that the previous property holds when the condition $c$ is true, where
-$c$ is conjunction of independence conditions ``$y_i$ \texttt{independent of} $x_j$'',
-where $y_i$ is bound by  \texttt{forall} and $x_j$ is bound by \texttt{new},
-and of a simple term $M$. ($c$ may consist of just independence conditions, or just the term $M$, or both.)
+$c$ is built by conjunctions or disjunctions of simple terms and independence conditions ``$y_i$ \texttt{independent-of} $x_j$'',
+where $y_i$ is bound by  \texttt{forall} and $x_j$ is bound by \texttt{new}. (However, disjunctions cannot
+mix terms and independence conditions.)
+
+The option \texttt{[restrictions\_may\_be\_equal]}, when it is present, allows several 
+random number generations among $x_1, \ldots, x_n$ to be the same, instead of being
+independent. One can then group, in a single \texttt{collision} statement, 
+situations in which $x_1, \ldots, x_n$ are the same or they are independent.
+The indices of the variables corresponding to $x_1, \ldots, x_n$
+in the game are still made independent of $x_1, \ldots, x_n$. 
+Hence, there are two cases: either $x_i$ is the same as $x_j$, or
+$x_i$ and $x_j$ are independent of each other. In this case, 
+the independence conditions can also be ``$x_i$ \texttt{independent-of} $x_j$'',
+where $x_i$ and $x_j$ are both bound by \texttt{new}. This condition
+then means $x_i$ and $x_j$ are different restrictions, so
+$x_j$ is also independent of $x_i$. 
 
 \ifchannels
 \item $\texttt{equiv}[\texttt{(}\nonterm{ident}[\texttt{(}\nonterm{ident}\texttt{)}]\texttt{)}]$\\
