updated doc of collision

--- a/docs/frontend.tex
+++ b/docs/frontend.tex
@@ -1584,7 +1584,7 @@ situations in which $x_1, \ldots, x_n$ are the same or they are independent.
 The indices of the variables corresponding to $x_1, \ldots, x_n$
 in the game are still made independent of $x_1, \ldots, x_n$. 
 Hence, there are two cases: either $x_i$ is the same as $x_j$, or
-$x_i$ and $x_j$ are independent of each other. In this case, 
+$x_i$ and $x_j$ are independent of each other. With the option \texttt{[restrictions\_may\_be\_equal]}, 
 the independence conditions can also be ``$x_i$ \texttt{independent-of} $x_j$'',
 where $x_i$ and $x_j$ are both bound by \texttt{new}. This condition
 then means $x_i$ and $x_j$ are different restrictions, so
