--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1256,7 +1256,14 @@ defines a pseudo-random function.
    for use in the \texttt{crypto} command 
    (see Section~\ref{sec:interact}).
 
-\item $\texttt{expand\ CDH(}G, Z, g, \vn{exp}, \vn{mult},
+ \item The specification of Diffie-Hellman key agreements is typically composed of two macro expansions:
+
+   \begin{itemize}
+   \item One from
+
+   \end{itemize}
+   
+   $\texttt{expand\ CDH(}G, Z, g, \vn{exp}, \vn{mult},
   p\texttt{).}$ defines a group that satisfies the computational
   Diffie-Hellman assumption.
 
