minor doc fixes

--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1326,14 +1326,14 @@ defines a pseudo-random function.
 
      \item $\texttt{expand\ DH\_good\_group(}G, Z, g, \vn{exp}, \vn{exp}', \vn{mult}\texttt{).}$ defines a group $G$ like
        \texttt{DH\_basic}, with the following additional properties:
-       $G$ 
+       $G$ TO DO
        
      \end{itemize}
 
    \item
      $\texttt{expand\ DH\_dist\_random\_group\_element\_vs\_exponent(}G,
-     Z, g, \vn{exp}, \vn{exp}', \vn{mult}, \vn{PDist}\texttt{).} says
-     that the probability of distringuishing a random group element
+     Z, g, \vn{exp}, \vn{exp}', \vn{mult}, \vn{PDist}\texttt{).}$ says
+     that the probability of distinguishing a random group element
      from an exponentiation $\vn{exp}(g,x)$ with a random exponent $x$
      is at most $\vn{PDist}$.  The other arguments are as in
      \texttt{DH\_basic} and all arguments must be defined before.
